--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Carbon Credits - Auth</title>
+    <title>CarbonX</title>
+
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon.png" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css"/>
   </head>
   <body>
